# couchdb-psql-replication

./: .gitignore  LICENSE  README.md  couchdb-psql-replication.cabal  dump.sh  run.sh  stack.yaml
src/: Config.hs  Couch.hs  Env.hs  Main.hs  OldMain.hs  Psql.hs  Util.hs
src/Axial/: Control.hs
src/Control/: Valid.hs
src/Control/Monad/Trans/Control/: Fixed.hs
