name:                couchdb-psql-replication
version:             0.0.1.0
synopsis:            Replicate documents from your CouchDB instance (docs) to your PostgreSQL instance (jsonb).
description:         Please see README.md
homepage:            https://github.com/AxialExchange/couchdb-psql-replication#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Fischer
maintainer:          rfischer+stack@axialexchange.com
copyright:           Copyright: (c) 2016 Axial Exchange
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Util, Couch, Psql, Config
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N -O3 -Wall -Werror
  build-depends:       base >= 4.7 && < 5
               ,       ekg >= 0.4.0.11 && < 0.5
               ,       monad-control >= 1.0 && < 1.1
               ,       data-default >= 0.7.1.1 && < 0.8
               ,       aeson >= 1 && < 2
               ,       unordered-containers >= 0.2.7.1 && < 0.3
               ,       bytestring >= 0.10.8.1 && < 0.11
               ,       text >= 1.2.2.1 && < 1.3
               ,       zlib >= 0.6.1.2 && < 0.7
               ,       postgresql-simple >= 0.5.2.1 && < 0.6
               ,       async >= 2.1.0 && < 2.2
               ,       resource-pool >= 0.2.3.2 && < 0.3
               ,       http-conduit >= 2.2.3 && < 2.3
               ,       http-client >= 0.5.4 && < 0.6
               ,       case-insensitive >= 1.2.0.7 && < 1.3
               ,       http-types >= 0.9.1 && < 0.10 && < 1.0
               ,       time >= 1.6.0.1 && < 1.7 
